# context-recall

./: .gitignore  .gitleaks.toml  CLAUDE.md  LICENSE  Makefile  README.md  com.meetingmind.agent.plist  config.example.yaml  context-recall.spec  meetingmind.spec  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
docs/: ROADMAP.md
scripts/: build_daemon.sh  build_sck_helper.sh  bump_version.sh  create_dmg.sh  daemon.entitlements  generate_icons.py  inject_daemon.sh  install.sh  notarize_and_staple.sh  setup_notary_profile.sh  setup_signing_cert.sh  signing_lib.sh  verify_signing.sh
src/: __main__.py  audio_capture.py  audio_cleanup.py  audio_devices.py  audio_monitor.py  audio_preflight.py  audio_routing.py  auto_arm.py  calendar_link.py  calendar_matcher.py  calendar_permission.py  detector.py  diariser.py  embeddings.py  live_transcriber.py  main.py  meeting_rename.py  mic_permission.py  pipeline_runner.py  pyannote_diariser.py  scheduler.py  screen_recording_permission.py  summariser.py  system_audio.py  talk_stats.py  template_selection.py  templates.py  transcriber.py
tests/: conftest.py  test_action_items_extractor.py  test_action_items_repository.py  test_analytics.py  test_api.py  test_api_action_items.py  test_api_ask.py  test_api_auth.py  test_api_auth_rotate.py  test_api_automations.py  test_api_calendar.py  test_api_calendar_link.py  test_api_clients.py  test_api_config.py  test_api_devices.py  test_api_diagnostics.py  test_api_export.py  test_api_insights.py  test_api_meeting_insights.py  test_api_meetings_extra.py  test_api_prep.py  (+107 more)
(+247 files in other folders)
