[project]
name = "context-recall"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Third-party SWIG bindings (pulled in via soundfile/sounddevice's cffi
    # chain) emit these at import time on Python 3.12+; not ours to fix.
    # Message-scoped so genuine deprecations in our code still surface.
    "ignore:builtin type SwigPy:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = [".venv", "dist", "build", "ui", "tests"]
reportMissingImports = "warning"
